--- a/templates/artists.html
+++ b/templates/artists.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/music.css' rel='stylesheet'>
     <link rel="stylesheet" href="/static/style.css">
-    <title>Groupie Tracker</title>
+    <title>Artists</title>
 </head>
 
 <body>
@@ -27,9 +27,38 @@
             </ul>
         </nav>
     </header>
-    <a href="/artists" class="link">
-        <button type="submit" name="artistbtn">Artists</button>
-    </a>
+    <!-- <aside class="wrapper">
+        <div class="sidebar">
+            
+        </div>
+
+    </aside> -->
+    <section>
+        {{range .Artists}}
+        <div class="container">
+            <div class="content">
+                <div class="card">
+                    <div class="card-content">
+                        <a href="/artists/{{.ID}}" class="link">
+                            <div class="image">
+                                <img src="{{.Image}}" alt="Image">
+                            </div>
+                            <div class="name">{{.Name}}</div>
+                            <div class="details"">
+                                <div class=" creationdate">
+                                Creation Date {{.CreationDate}}
+                            </div>
+                            <div class="firstalbum">
+                                First Album {{.FirstAlbum}}
+                            </div>
+                    </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
+        {{end}}
+    </section>
 </body>
 
 </html>
