--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-    --firstcolor: #f54837;
+    --firstcolor: #FE9000;
 }
 
 * {
