--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,8 @@
             <ul class="nav-links">
                 <div class="menu">
 
-                    <li><a href="/" style="display: flex; justify-content: center; align-items: center;"><i
-                                class="gg-home" style="color: #fff; margin-right: 3px;"></i>Home</a></li>
-                    <li><a href="/" style="display: flex; flex-direction: row;""><div class=" abouticon"
-                            alt="">About</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">About</a></li>
                 </div>
             </ul>
         </nav>
