--- a/templates/artists.html
+++ b/templates/artists.html
@@ -14,15 +14,13 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo" style="display: flex; justify-content: center; align-items: center;">Groupie Tracker<i
-                    class="gg-music" style="color: #fff; margin-left: 5px;"></i></div>
+            <div class="logo">Groupie Tracker<i class="gg-mussic" style="color: #fff; margin-left: 5px;"></i></div>
             <ul class="nav-links">
                 <div class="menu">
-
-                    <li><a href="/" style="display: flex; justify-content: center; align-items: center;"><i
-                                class="gg-home" style="color: #fff; margin-right: 3px;"></i>Home</a></li>
-                    <li><a href="/" style="display: flex; flex-direction: row;""><div class=" abouticon"
-                            alt="">About</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">
+                            <div class=" abouticon" alt="">About
+                        </a></li>
                 </div>
             </ul>
         </nav>
