style: Edit artists page navbar

--- a/templates/artists.html
+++ b/templates/artists.html
@@ -14,23 +14,17 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo">Groupie Tracker<i class="gg-mussic" style="color: #fff; margin-left: 5px;"></i></div>
+            <div class="logo" style="display: flex; justify-content: center; align-items: center;">Groupie Tracker<i
+                    class="gg-music" style="color: #fff; margin-left: 5px;"></i></div>
             <ul class="nav-links">
                 <div class="menu">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/">
-                            <div class=" abouticon" alt="">About
-                        </a></li>
+                    <li><a href="/">About</a></li>
                 </div>
             </ul>
         </nav>
     </header>
-    <!-- <aside class="wrapper">
-        <div class="sidebar">
-            
-        </div>
 
-    </aside> -->
     <section>
         {{range .Artists}}
         <div class="container">
