--- a/static/style.css
+++ b/static/style.css
@@ -30,35 +30,27 @@ li {
 }
 
 .navbar {
-    width: 100vw;
+    width: 80%;
     display: flex;
     height: 70px;
-    /* align-items: center; */
+    align-items: center;
     justify-content: space-between;
     padding: 20px;
     background-color: var(--firstcolor);
     color: #fff;
 }
 
-.navbar .logo {
-    margin-left: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.menu{
-    margin-right: 10px;
+.menu li:hover,
+.menu a:hover {
+    background-color: #fff;
+    color: var(--firstcolor);
+    border-radius: 5px;
+    transition: 0.3s ease;
 }
 
 .nav-links a {
     color: #fff;
     font-weight: 600;
-}
-
-.nav-links li:hover {
-    color: #FE9000;
-    font-weight: 600;
-    background: #fff;
 }
 
 .logo {
@@ -72,14 +64,6 @@ li {
     font-size: 18px;
 }
 
-
-a:hover,
-i:hover {
-    /* background-color: #fff; */
-    color: var(--firstcolor);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
 
 .abouticon {
     width: 25px;
@@ -98,6 +82,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     /* background-image: url(1.jpg); */
     /* background-size: cover; */
 
