--- a/templates/viewArtist.html
+++ b/templates/viewArtist.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        {{define "NavBar"}}
         <nav class="navbar">
             <div class="logo">Groupie Tracker</div>
             <ul class="nav-links">
@@ -19,6 +20,7 @@
                 </div>
             </ul>
         </nav>
+        {{end}}
     </header>
     <section>
         <div class="parent">
