--- a/templates/error.html
+++ b/templates/error.html
@@ -9,6 +9,10 @@
     <title>{{.TextErr}}</title>
 </head>
 <style>
+    :root {
+        --firstcolor: #FE9000;
+    }
+
     * {
         transition: all 0.6s;
         margin: 0;
@@ -26,7 +30,7 @@
     }
 
     .btn-home {
-        background-image: linear-gradient(135deg, #f5695c 10%, #f54837 100%);
+        background-image: linear-gradient(135deg, #f5695c 10%, var(--firstcolor) 100%);
         font-weight: bold;
         margin-top: 10px;
         color: white;
@@ -47,7 +51,7 @@
     }
 
     .btn-home:hover {
-        background-image: linear-gradient(135deg, #f54837 10%, #f5695c 100%);
+        background-image: linear-gradient(135deg, var(--firstcolor) 10%, #f5695c 100%);
 
     }
 
