--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/music.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/static/style.css">
+    <!-- <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/music.css' rel='stylesheet'> -->
+    <link rel="stylesheet" href="/static/main.css">
     <title>Groupie Tracker</title>
 </head>
 
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <a href="/artists" class="link">
-        <button type="submit" name="artistbtn">Artists</button>
+        <button type="submit" class="btn-home" name="artistbtn">Artists</button>
     </a>
 </body>
 
