--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <!-- <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/music.css' rel='stylesheet'> -->
     <link rel="stylesheet" href="/static/main.css">
+    <link rel="shortcut icon" href="../static/images/icon.png" type="image/x-icon">
     <title>Groupie Tracker</title>
 </head>
 
@@ -14,20 +15,30 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo" style="display: flex; justify-content: center; align-items: center;">Groupie Tracker<i
-                    class="gg-music" style="color: #fff; margin-left: 5px;"></i></div>
+            <div class="logo" style="display: flex; justify-content: center; align-items: center;"><a href="/"><img class="logo" src="../static/images/logomusi.png" alt="" srcset=""></a></div>
             <ul class="nav-links">
                 <div class="menu">
-
                     <li><a href="/">Home</a></li>
                     <li><a href="/">About</a></li>
                 </div>
             </ul>
         </nav>
     </header>
-    <a href="/artists" class="link">
-        <button type="submit" class="btn-home" name="artistbtn">Artists</button>
-    </a>
+
+    <div class="content">
+        <div class="images"> <img class="image" src="../static/images/music.svg" alt="" srcset=""></div>
+        <div class="text">
+            <div class="text-h1">
+                <h1>Find <span>the rhythm</span> you love</h1>
+            </div>
+            <div class="text-h2">
+                <h2>Discover more artists</h2>
+                <a href="/artists" class="link">
+                    <button type="submit" class="btn-home" name="artistbtn">Artists</button>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
