--- a/static/style.css
+++ b/static/style.css
@@ -30,11 +30,12 @@ li {
 }
 
 .navbar {
-    width: 80%;
+    width: 100%;
     display: flex;
     height: 70px;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
     padding: 20px;
     background-color: var(--firstcolor);
     color: #fff;
@@ -54,8 +55,15 @@ li {
 }
 
 .logo {
-    font-size: 32px;
+    margin-top: 6px;
+    width: 120px;
     color: #fff;
+}
+
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
 }
 
 .menu {
