--- a/static/viewArtists.css
+++ b/static/viewArtists.css
@@ -30,14 +30,23 @@ li {
 }
 
 .navbar {
-    width: 80%;
+    width: 100%;
     display: flex;
     height: 70px;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
     padding: 20px;
     background-color: var(--firstcolor);
     color: #fff;
+}
+
+.menu li:hover,
+.menu a:hover {
+    background-color: #fff;
+    color: var(--firstcolor);
+    border-radius: 5px;
+    transition: 0.3s ease;
 }
 
 .nav-links a {
@@ -46,10 +55,16 @@ li {
 }
 
 .logo {
-    font-size: 32px;
+    margin-top: 6px;
+    width: 120px;
     color: #fff;
 }
 
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+}
 .menu {
     display: flex;
     gap: 1em;
