--- a/templates/artists.html
+++ b/templates/artists.html
@@ -4,20 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/music.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="../static/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="/static/style.css">
     <title>Artists</title>
 </head>
 
 <body>
-
     <header>
         <nav class="navbar">
-            <div class="logo" style="display: flex; justify-content: center; align-items: center;">Groupie Tracker<i
-                    class="gg-music" style="color: #fff; margin-left: 5px;"></i></div>
+            <div class="logo"><a href="/"><img class="logo" src="../static/images/logomusi.png" alt="" srcset=""></a></div>
             <ul class="nav-links">
                 <div class="menu">
+
                     <li><a href="/">Home</a></li>
                     <li><a href="/">About</a></li>
                 </div>
