--- a/templates/error.html
+++ b/templates/error.html
@@ -5,24 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../static/images/logo.png" />
+    <link rel="shortcut icon" href="../static/icon.png" type="image/x-icon">
     <title>{{.TextErr}}</title>
 </head>
 <style>
     :root {
         --firstcolor: #FE9000;
+        --secondcolor: #f7ac49;
     }
 
     * {
         transition: all 0.6s;
         margin: 0;
         padding: 0;
+        color: #56423e;
     }
 
     .err {
         height: 90vh;
         font-family: sans-serif;
-        color: gray;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -30,7 +31,7 @@
     }
 
     .btn-home {
-        background-image: linear-gradient(135deg, #f5695c 10%, var(--firstcolor) 100%);
+        background-image: linear-gradient(135deg, var(--secondcolor) 10%, var(--firstcolor) 100%);
         font-weight: bold;
         margin-top: 10px;
         color: white;
@@ -51,7 +52,7 @@
     }
 
     .btn-home:hover {
-        background-image: linear-gradient(135deg, var(--firstcolor) 10%, #f5695c 100%);
+        background-image: linear-gradient(135deg, var(--firstcolor) 10%, var(--secondcolor) 100%);
 
     }
 
