--- a/static/main.css
+++ b/static/main.css
@@ -13,6 +13,37 @@
     font-family: 'Poppins', sans-serif;
 }
 
+header {
+    background-color: var(--firstcolor)
+}
+
+.navbar .search {
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+
+.navbar .search input[type="text"] {
+    padding: 5px;
+    border: none;
+    font-size: 14px;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1224px;
+    width: 92%;
+    margin: 0 auto;
+}
+
 body {
     overflow: hidden;
 }
@@ -35,36 +66,74 @@ li {
 }
 
 .navbar {
-    width: 100%;
+    min-height: 70px;
     display: flex;
-    height: 70px;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+}
+
+.nav-logo {
+    padding: 6px;
+    width: 150px;
     overflow: hidden;
-    padding: 20px;
-    background-color: var(--firstcolor);
-    color: #fff;
 }
 
-.menu li:hover,
-.menu a:hover {
-    background-color: #fff;
-    color: var(--firstcolor);
-    border-radius: 5px;
-    transition: 0.3s ease;
+.nav-logos {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-.nav-links a {
-    color: #fff;
-    font-weight: 600;
+
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
 }
 
-.search {
-
+.nav-link {
+    margin: 0;
     padding: 10px;
-    border: 1px solid #fff;
-    border-radius: 10px;
+    font-weight: 600;
+    border-radius: 6px;
+    transition: 0.3s ease-out;
 }
+
+.nav-link:hover {
+    color: #56423e;
+    background: #fff;
+}
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: white;
+}
+
+i {
+    padding: 10px;
+    color: #fff;
+    margin: 6px;
+    border-radius: 6%;
+}
+
+i:hover {
+    background: #fff;
+    color: var(--firstcolor);
+}
+
 
 .logo {
     margin-top: 6px;
@@ -189,13 +258,51 @@ h1 {
     font-size: 70px;
 }
 
-@media screen and (max-width:810px) {
+
+@media(max-width:900px) {
+    .hamburger {
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: var(--firstcolor);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .nav-item {
+        margin: 16px 0;
+    }
+
+    .nav-menu.active {
+        right: 0;
+    }
+
     .images {
         display: none;
         position: absolute;
         opacity: 0.5;
         z-index: -1;
     }
+
 
     .content {
         flex-direction: column;
@@ -209,4 +316,13 @@ h1 {
     h1 {
         font-size: 55px;
     }
+
+    .searchdiv {
+        right: 10px;
+    }
+
+    /* 
+    .search {
+        display: none;
+    } */
 }
