--- a/static/style.css
+++ b/static/style.css
@@ -232,17 +232,18 @@ section .card .image:hover {
 }
 */
 @media screen and (max-width: 850px) {
-    .card {
-            height: 200px;
-            width: 50%;
-        }
-    
-        .card:hover {
-            transition: all 0.5s ease;
-            height: 400px;
-            opacity: 1;
-        }
+    /* .card {
+        height: 200px;
+        width: 50%;
+    }
+
+    .card:hover {
+        transition: all 0.5s ease;
+        height: 400px;
+        opacity: 1;
+    } */
 }
+
 /*
 @media screen and (max-width: 550px) {
     section {
