--- a/static/style.css
+++ b/static/style.css
@@ -2,85 +2,17 @@
 
 :root {
     --firstcolor: #FE9000;
+    --secondcolor: #f7ac49;
+    --textcolor: #56423e;
+    --whitecolor: #fff;
 }
 
 * {
     margin: 0;
     padding: 0;
-    color: #56423e;
+    color: var(--textcolor);
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-
-}
-
-header {
-    width: 100vw;
-    height: max-content;
-    display: flex;
-    justify-content: center;
-    /* background: #56423e; */
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-.navbar {
-    width: 100%;
-    display: flex;
-    height: 70px;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 20px;
-    background-color: var(--firstcolor);
-    color: #fff;
-}
-
-.menu li:hover,
-.menu a:hover {
-    background-color: #fff;
-    color: var(--firstcolor);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.nav-links a {
-    color: #fff;
-    font-weight: 600;
-}
-
-.logo {
-    margin-top: 6px;
-    width: 120px;
-    color: #fff;
-}
-
-.menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-
-.menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-
-
-.abouticon {
-    width: 25px;
-    height: 25px;
-    position: relative;
-}
-
-.menu li {
-    padding: 5px 14px;
 }
 
 body {
@@ -90,15 +22,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    /* background-image: url(1.jpg); */
-    /* background-size: cover; */
-
 }
 
 section {
+    position: absolute;
+    top: 10vh;
     height: 80vh;
-    /* background-color: #fff; */
     border-radius: 20px;
     width: 85vw;
     display: flex;
@@ -206,49 +135,3 @@ section .card .image img {
 .details {
     font-weight: 500;
 }
-
-/* 
-section .card .image:hover {
-    height: 255px;
-    width: 255px;
-    transform: all 3s ease linear;
-} */
-
-/* 
-@media screen and (max-width: 1500px) {
-    section {
-        height: 100vh;
-        width: 100%;
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media screen and (max-width: 1142px) {
-    section {
-        height: 100vh;
-        width: 100%;
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-*/
-@media screen and (max-width: 850px) {
-    /* .card {
-        height: 200px;
-        width: 50%;
-    }
-
-    .card:hover {
-        transition: all 0.5s ease;
-        height: 400px;
-        opacity: 1;
-    } */
-}
-
-/*
-@media screen and (max-width: 550px) {
-    section {
-        height: 100vh;
-        width: 100%;
-        grid-template-columns: repeat(1, 1fr);
-    }
-} */
