--- a/static/viewArtists.css
+++ b/static/viewArtists.css
@@ -1,95 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+:root {
+    --firstcolor: #FE9000;
+    --secondcolor: #f7ac49;
+    --textcolor: #56423e;
+    --whitecolor: #fff;
+}
+
 * {
     margin: 0;
     padding: 0;
-    color: #56423e;
+    color: var(--textcolor);
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-
 }
 
-:root {
-    --firstcolor: #FE9000;
-}
-
-header {
-    width: 100vw;
-    height: max-content;
-    display: flex;
-    justify-content: center;
-    /* background: #56423e; */
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-.navbar {
-    width: 100%;
-    display: flex;
-    height: 70px;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 20px;
-    background-color: var(--firstcolor);
-    color: #fff;
-}
-
-.menu li:hover,
-.menu a:hover {
-    background-color: #fff;
-    color: var(--firstcolor);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.nav-links a {
-    color: #fff;
-    font-weight: 600;
-}
-
-.logo {
-    margin-top: 6px;
-    width: 120px;
-    color: #fff;
-}
-
-.menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-.menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-
-.menu li:hover,
-a:hover {
-    background-color: #fff;
-    color: var(--firstcolor);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.menu li {
-    padding: 5px 14px;
-}
 
 body {
     width: 100vw;
     height: 100vh;
-
+    z-index: 0;
 }
 
 section {
+    top: 10vh;
+    position: absolute;
     height: 80vh;
 }
 
@@ -100,7 +35,6 @@ section .container {
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    /* flex-direction: column; */
 }
 
 section .container .content {
@@ -183,16 +117,6 @@ h2 {
 
 }
 
-/* .card {
-    height: 400px;
-    width: 400px;
-    position: relative;
-    background: #fff;
-    border-radius: 20px;
-    margin: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-} */
-
 .parent {
     width: 100vw;
     /* height: 100vh; */
@@ -210,20 +134,6 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
 }
-
-/* table,
-th,
-td {
-    margin: 6px;
-    border: 1px solid var(--firstcolor);
-    border-collapse: collapse;
-    text-align: center;
-}
-
-td {
-    padding: 6px;
-    margin: 10px;
-} */
 
 th {
     color: #fff;
