--- a/templates/error.html
+++ b/templates/error.html
@@ -67,7 +67,7 @@
         <h1>{{.ErrNum}}</h1>
         <p>{{.TextErr}}</p>
         <li>
-            <a href="http://localhost:8080/">
+            <a href="/">
                 <button class="btn-home">Home</button>
             </a>
         </li>
