Style: Refont site

--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-    --firstcolor: #FE9000;
-    --secondcolor: #f7ac49;
-    --textcolor: #56423e;
+    --firstcolor: #080321;
+    --secondcolor: #080321bd;
+    --textcolor: #4e2202;
     --whitecolor: #fff;
 }
 
