--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-    --firstcolor: #FE9000;
-    --secondcolor: #f7ac49;
-    --textcolor: #56423e;
+    --firstcolor: #080321;
+    --secondcolor: #080321bd;
+    --textcolor: #4e2202;
     --whitecolor: #fff;
 }
 
@@ -22,43 +22,44 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: #F2F2F2;
 }
 
 section {
+    top: 15vh;
     position: absolute;
-    top: 10vh;
-    height: 80vh;
+    height: 80%;
     border-radius: 20px;
     width: 85vw;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     overflow: scroll;
+    background: var(--whitecolor);
 }
 
 .card {
     height: 320px;
-    width: 90%;
+    width: 280px;
     overflow: hidden;
     max-width: 400px;
     background: #fff;
     position: relative;
     border-radius: 20px;
     margin: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    opacity: 0.9;
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.1);
+    /* opacity: 0.9; */
 }
 
 .card:hover {
     transition: all 0.5s ease;
-    height: 400px;
-    opacity: 1;
+    height: 330px;
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--firstcolor);
 }
 
 .details {
@@ -76,7 +77,7 @@ a {
     margin: 15px 5px;
     padding: 5px;
     height: fit-content;
-    color: #56423e;
+    color: var(--textcolor);
     font-size: 15px;
     font-weight: 600;
     border: 1.5px solid var(--firstcolor);
@@ -101,7 +102,7 @@ a {
 
 .card-content .link .name {
     margin-top: 15px;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 600;
     text-align: center;
     /* background: #000; */
@@ -110,6 +111,7 @@ a {
 .card .card-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 20px;
     position: relative;
@@ -117,18 +119,34 @@ a {
 }
 
 section .card .image {
+    margin-left: 10px;
     height: 250px;
     width: 250px;
-    border-radius: 40% 50% 40% 50%;
+    border-radius: 50%;
     padding: 3px;
     background: var(--firstcolor);
+}
+
+section .card .image:hover {
+    margin: 0;
+    height: 270px;
+    width: 270px;
+    transition: all 0.5s ease;
 }
 
 section .card .image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    border-radius: 40% 50% 40% 50%;
+    border-radius: 50%;
+    border: 3px solid #fff;
+}
+
+section .card .image img:hover {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
     border: 3px solid #fff;
 }
 
